# make

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-gpu.txt  requirements.txt
configs/: default.yaml  server.yaml  tuned_postprocess.yaml  tuned_postprocess.yaml.report.json
docs/: approach.md  architecture.md  ubuntu-mi300x.md
models/: gbm.txt  gbm.txt.meta.json
scripts/: build_submission.py  cv_gbm.py  evaluate.py  generate_mock_data.py  predict_ensemble.py  predict_gbm.py  preprocess_tiles.py  train_deep.py  train_gbm.py  tune_postprocess.py  visualize_submission.py
src/deforest/: __init__.py  cli.py  config.py  ensemble.py  preprocess.py  runtime.py
src/deforest/deep/: __init__.py  dataset.py  losses.py  model.py  predict.py  train.py
src/deforest/evaluation/: metrics.py
src/deforest/features/: aef.py  satellite.py
src/deforest/inference/: tile_predict.py  time_step.py
src/deforest/labels/: fusion.py  parsers.py
src/deforest/postprocess/: polygonize.py
src/deforest2/: __init__.py  config.py
src/deforest2/data/: align.py  forest_mask.py  paths.py  readers.py
src/deforest2/features/: aef.py  satellite.py  terrain.py
src/deforest2/inference/: tile_predict.py  time_step.py
src/deforest2/labels/: fusion.py  parsers.py
src/deforest2/models/: gbm.py
src/deforest2/postprocess/: metrics.py  polygonize.py
tests/: test_ensemble.py  test_fusion.py  test_metrics.py  test_parsers.py  test_polygonize.py  test_runtime.py  test_smoke.py
